Changed Networking from HttpClient to HttpUrlConnection to match Android 6 (M) API changes.