@@ -4,35 +4,20 @@
  */
 package com.maksl5.bl_hunt.activity;
 
+import java.io.BufferedReader;
+import java.io.BufferedWriter;
 import java.io.IOException;
+import java.io.InputStreamReader;
+import java.io.OutputStream;
+import java.io.OutputStreamWriter;
 import java.io.UnsupportedEncodingException;
-import java.net.URI;
+import java.net.HttpURLConnection;
+import java.net.URL;
 import java.util.ArrayList;
+import java.util.HashMap;
 import java.util.List;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
-
-import org.apache.http.HttpResponse;
-import org.apache.http.HttpVersion;
-import org.apache.http.NameValuePair;
-import org.apache.http.client.ClientProtocolException;
-import org.apache.http.client.HttpClient;
-import org.apache.http.client.entity.UrlEncodedFormEntity;
-import org.apache.http.client.methods.HttpPost;
-import org.apache.http.conn.ClientConnectionManager;
-import org.apache.http.conn.params.ConnManagerPNames;
-import org.apache.http.conn.params.ConnPerRouteBean;
-import org.apache.http.conn.scheme.PlainSocketFactory;
-import org.apache.http.conn.scheme.Scheme;
-import org.apache.http.conn.scheme.SchemeRegistry;
-import org.apache.http.impl.client.DefaultHttpClient;
-import org.apache.http.impl.conn.tsccm.ThreadSafeClientConnManager;
-import org.apache.http.message.BasicNameValuePair;
-import org.apache.http.params.BasicHttpParams;
-import org.apache.http.params.CoreProtocolPNames;
-import org.apache.http.params.HttpParams;
-import org.apache.http.params.HttpProtocolParams;
-import org.apache.http.util.EntityUtils;
 
 import android.app.ActionBar;
 import android.app.AlertDialog;
@@ -67,7 +52,7 @@ import com.maksl5.bl_hunt.net.Authentification;
 import com.maksl5.bl_hunt.net.Authentification.OnLoginChangeListener;
 import com.maksl5.bl_hunt.net.Authentification.OnNetworkResultAvailableListener;
 import com.maksl5.bl_hunt.net.AuthentificationSecure;
-import com.maksl5.bl_hunt.net.EasySSLSocketFactory;
+import com.maksl5.bl_hunt.net.NetworkThread;
 import com.maksl5.bl_hunt.storage.DatabaseManager;
 import com.maksl5.bl_hunt.storage.PreferenceManager;
 
@@ -827,55 +812,61 @@ public class SettingsActivity extends android.preference.PreferenceActivity impl
 			if (remoteFile.startsWith("https")) https = true;
 
 			try {
-
-				List<NameValuePair> postValues = new ArrayList<NameValuePair>();
+				
+				HashMap<String, String> postValues = new HashMap<String, String>();
 
 				for (int i = 2; i < params.length; i++) {
 					Pattern pattern = Pattern.compile("(.+)=(.+)", Pattern.CASE_INSENSITIVE);
 					Matcher matcher = pattern.matcher(params[i]);
 
-					matcher.matches();
+					if (matcher.matches()) {
 
-					postValues.add(new BasicNameValuePair(matcher.group(1), matcher.group(2)));
+						postValues.put(matcher.group(1), matcher.group(2));
+					}
 				}
 
-				URI httpUri = URI.create(remoteFile);
+				URL httpUri = new URL(remoteFile);
 
-				// SSL Implementation
+				HttpURLConnection conn = (HttpURLConnection) httpUri.openConnection();
+				conn.setReadTimeout(15000);
+				conn.setConnectTimeout(15000);
+				conn.setRequestMethod("POST");
+				conn.setDoInput(true);
+				conn.setDoOutput(true);
+				conn.setRequestProperty("Content-Type", "application/x-www-form-urlencoded");
 
-				HttpClient httpClient;
+				OutputStream os = conn.getOutputStream();
+				BufferedWriter writer = new BufferedWriter(new OutputStreamWriter(os, "UTF-8"));
+				writer.write(NetworkThread.getPostDataString(postValues));
 
-				if (https) {
+				writer.flush();
+				writer.close();
+				os.close();
 
-					SchemeRegistry schemeRegistry = new SchemeRegistry();
-					// http scheme
-					schemeRegistry.register(new Scheme("http", PlainSocketFactory.getSocketFactory(), 80));
-					// https scheme
-					schemeRegistry.register(new Scheme("https", new EasySSLSocketFactory(), 443));
+				int responseCode = conn.getResponseCode();
 
-					HttpParams httpParams = new BasicHttpParams();
-					httpParams.setParameter(ConnManagerPNames.MAX_TOTAL_CONNECTIONS, 30);
-					httpParams.setParameter(ConnManagerPNames.MAX_CONNECTIONS_PER_ROUTE, new ConnPerRouteBean(30));
-					httpParams.setParameter(CoreProtocolPNames.USE_EXPECT_CONTINUE, false);
-					HttpProtocolParams.setVersion(httpParams, HttpVersion.HTTP_1_1);
+				String result = "";
 
-					ClientConnectionManager cm = new ThreadSafeClientConnManager(httpParams, schemeRegistry);
+				if (responseCode == HttpURLConnection.HTTP_OK) {
 
-					httpClient = new DefaultHttpClient(cm, httpParams);
+					String line = "";
+					BufferedReader br = new BufferedReader(new InputStreamReader(conn.getInputStream()));
+
+					StringBuilder stringBuilder = new StringBuilder();
+
+					while ((line = br.readLine()) != null) {
+						stringBuilder.append(line + System.lineSeparator());
+					}
+					
+					stringBuilder.deleteCharAt(stringBuilder.lastIndexOf(System.lineSeparator()));
+
+					result = stringBuilder.toString();
+					
 				}
 				else {
-					httpClient = new DefaultHttpClient();
-				}
-				HttpPost postRequest = new HttpPost(httpUri);
 
-				postRequest.setEntity(new UrlEncodedFormEntity(postValues));
+					return "<requestID='" + requestId + "' />" + "Error=" + responseCode + "\n" + conn.getResponseMessage();
 
-				HttpResponse httpResponse = httpClient.execute(postRequest);
-
-				String result = EntityUtils.toString(httpResponse.getEntity());
-
-				if (!String.valueOf(httpResponse.getStatusLine().getStatusCode()).startsWith("2")) {
-					return "<requestID='" + requestId + "' />" + "Error=" + httpResponse.getStatusLine().getStatusCode();
 				}
 
 				return "<requestID='" + requestId + "' />" + result;
@@ -884,11 +875,6 @@ public class SettingsActivity extends android.preference.PreferenceActivity impl
 				// TODO Auto-generated catch block
 				e.printStackTrace();
 				return "<requestID='" + requestId + "' />" + "Error=5\n" + e.getMessage();
-			}
-			catch (ClientProtocolException e) {
-				// TODO Auto-generated catch block
-				e.printStackTrace();
-				return "<requestID='" + requestId + "' />" + "Error=4\n" + e.getMessage();
 			}
 			catch (IOException e) {
 				// TODO Auto-generated catch block
