@@ -4,37 +4,20 @@
  */
 package com.maksl5.bl_hunt.net;
 
-
-
+import java.io.BufferedReader;
+import java.io.BufferedWriter;
 import java.io.IOException;
+import java.io.InputStreamReader;
+import java.io.OutputStream;
+import java.io.OutputStreamWriter;
 import java.io.UnsupportedEncodingException;
-import java.net.URI;
-import java.util.ArrayList;
-import java.util.List;
+import java.net.HttpURLConnection;
+import java.net.URL;
+import java.net.URLEncoder;
+import java.util.HashMap;
+import java.util.Map;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
-
-import org.apache.http.HttpResponse;
-import org.apache.http.HttpVersion;
-import org.apache.http.NameValuePair;
-import org.apache.http.client.ClientProtocolException;
-import org.apache.http.client.HttpClient;
-import org.apache.http.client.entity.UrlEncodedFormEntity;
-import org.apache.http.client.methods.HttpPost;
-import org.apache.http.conn.ClientConnectionManager;
-import org.apache.http.conn.params.ConnManagerPNames;
-import org.apache.http.conn.params.ConnPerRouteBean;
-import org.apache.http.conn.scheme.PlainSocketFactory;
-import org.apache.http.conn.scheme.Scheme;
-import org.apache.http.conn.scheme.SchemeRegistry;
-import org.apache.http.impl.client.DefaultHttpClient;
-import org.apache.http.impl.conn.tsccm.ThreadSafeClientConnManager;
-import org.apache.http.message.BasicNameValuePair;
-import org.apache.http.params.BasicHttpParams;
-import org.apache.http.params.CoreProtocolPNames;
-import org.apache.http.params.HttpParams;
-import org.apache.http.params.HttpProtocolParams;
-import org.apache.http.util.EntityUtils;
 
 import android.os.AsyncTask;
 import android.view.MenuItem;
@@ -42,8 +25,6 @@ import android.view.MenuItem;
 import com.maksl5.bl_hunt.BlueHunter;
 import com.maksl5.bl_hunt.R;
 import com.maksl5.bl_hunt.activity.MainActivity;
-
-
 
 /**
  * 
@@ -81,7 +62,7 @@ public class NetworkThread extends AsyncTask<String, Integer, String> {
 
 		try {
 
-			List<NameValuePair> postValues = new ArrayList<NameValuePair>();
+			HashMap<String, String> postValues = new HashMap<String, String>();
 
 			for (int i = 2; i < params.length; i++) {
 				Pattern pattern = Pattern.compile("(.+)=(.+)", Pattern.CASE_INSENSITIVE);
@@ -89,47 +70,55 @@ public class NetworkThread extends AsyncTask<String, Integer, String> {
 
 				if (matcher.matches()) {
 
-					postValues.add(new BasicNameValuePair(matcher.group(1), matcher.group(2)));
+					postValues.put(matcher.group(1), matcher.group(2));
 				}
 			}
 
-			URI httpUri = URI.create(remoteFile);
+			URL httpUri = new URL(remoteFile);
 
-			// SSL Implementation
+			HttpURLConnection conn = (HttpURLConnection) httpUri.openConnection();
+			conn.setReadTimeout(120000);
+			conn.setConnectTimeout(15000);
+			conn.setRequestMethod("POST");
+			conn.setDoInput(true);
+			conn.setDoOutput(true);
+			conn.setRequestProperty("Content-Type", "application/x-www-form-urlencoded");
 
-			HttpClient httpClient;
+			OutputStream os = conn.getOutputStream();
+			BufferedWriter writer = new BufferedWriter(new OutputStreamWriter(os, "UTF-8"));
+			writer.write(getPostDataString(postValues));
 
-			if (https) {
+			writer.flush();
+			writer.close();
+			os.close();
 
-				SchemeRegistry schemeRegistry = new SchemeRegistry();
-				// http scheme
-				schemeRegistry.register(new Scheme("http", PlainSocketFactory.getSocketFactory(), 80));
-				// https scheme
-				schemeRegistry.register(new Scheme("https", new EasySSLSocketFactory(), 443));
+			int responseCode = conn.getResponseCode();
 
-				HttpParams httpParams = new BasicHttpParams();
-				httpParams.setParameter(ConnManagerPNames.MAX_TOTAL_CONNECTIONS, 30);
-				httpParams.setParameter(ConnManagerPNames.MAX_CONNECTIONS_PER_ROUTE, new ConnPerRouteBean(30));
-				httpParams.setParameter(CoreProtocolPNames.USE_EXPECT_CONTINUE, false);
-				HttpProtocolParams.setVersion(httpParams, HttpVersion.HTTP_1_1);
+			String result = "";
 
-				ClientConnectionManager cm =
-						new ThreadSafeClientConnManager(httpParams, schemeRegistry);
+			if (responseCode == HttpURLConnection.HTTP_OK) {
 
-				httpClient = new DefaultHttpClient(cm, httpParams);
+				
+				BufferedReader br = new BufferedReader(new InputStreamReader(conn.getInputStream()));
+
+				StringBuilder stringBuilder = new StringBuilder();
+				
+				String line = "";
+				while ((line = br.readLine()) != null) {
+					stringBuilder.append(line + System.lineSeparator());
+					
+				}
+
+				stringBuilder.deleteCharAt(stringBuilder.lastIndexOf(System.lineSeparator()));
+				
+				result = stringBuilder.toString();
+				
 			}
 			else {
-				httpClient = new DefaultHttpClient();
+
+				return "<requestID='" + requestId + "' />" + "Error=" + responseCode + "\n" + conn.getResponseMessage();
+
 			}
-			HttpPost postRequest = new HttpPost(httpUri);
-
-			postRequest.setEntity(new UrlEncodedFormEntity(postValues));
-
-			HttpResponse httpResponse = httpClient.execute(postRequest);
-
-			String result = EntityUtils.toString(httpResponse.getEntity());
-
-			if (!String.valueOf(httpResponse.getStatusLine().getStatusCode()).startsWith("2")) { return "<requestID='" + requestId + "' />" + "Error=" + httpResponse.getStatusLine().getStatusCode(); }
 
 			return "<requestID='" + requestId + "' />" + result;
 		}
@@ -137,11 +126,6 @@ public class NetworkThread extends AsyncTask<String, Integer, String> {
 			// TODO Auto-generated catch block
 			e.printStackTrace();
 			return "<requestID='" + requestId + "' />" + "Error=5\n" + e.getMessage();
-		}
-		catch (ClientProtocolException e) {
-			// TODO Auto-generated catch block
-			e.printStackTrace();
-			return "<requestID='" + requestId + "' />" + "Error=4\n" + e.getMessage();
 		}
 		catch (IOException e) {
 			// TODO Auto-generated catch block
@@ -197,6 +181,23 @@ public class NetworkThread extends AsyncTask<String, Integer, String> {
 	@Override
 	protected void onProgressUpdate(Integer... values) {
 
+	}
+
+	public static String getPostDataString(HashMap<String, String> params) throws UnsupportedEncodingException {
+		StringBuilder result = new StringBuilder();
+		boolean first = true;
+		for (Map.Entry<String, String> entry : params.entrySet()) {
+			if (first)
+				first = false;
+			else
+				result.append("&");
+
+			result.append(URLEncoder.encode(entry.getKey(), "UTF-8"));
+			result.append("=");
+			result.append(URLEncoder.encode(entry.getValue(), "UTF-8"));
+		}
+
+		return result.toString();
 	}
 
 }
